# hyperstack

./: .gitignore  .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  release-please-config.json
arete/: CHANGELOG.md  Cargo.toml  README.md
arete-idl/: CHANGELOG.md  Cargo.toml  README.md
arete-idl/src/: lib.rs  search.rs  snapshot.rs  utils.rs
arete-idl/src/analysis/: pda_graph.rs
arete-idl/tests/: parse_fixtures.rs
arete-idl/tests/fixtures/: ore.json
arete/src/: lib.rs
cli/: CHANGELOG.md  Cargo.toml  README.md  arete.toml.example  hyperstack.toml.example
cli/src/: api_client.rs  config.rs  main.rs  telemetry.rs  templates.rs  ui.rs
cli/src/commands/: auth.rs  build.rs  config.rs  create.rs  deploy.rs  explore.rs  idl.rs  mod.rs  sdk.rs  spec.rs  stack.rs  status.rs  telemetry.rs  up.rs
cli/src/commands/stream/: client.rs  filter.rs  mod.rs  output.rs  snapshot.rs  store.rs  token.rs
docs/: .prettierrc  (+16 more)
examples/ore-rust/: Cargo.toml
examples/ore-rust/src/: main.rs
examples/ore-server/: Cargo.toml  README.md
examples/ore-server/src/: main.rs
examples/pumpfun-server/: Cargo.toml  README.md
examples/pumpfun-server/src/: main.rs
hyperstack/: CHANGELOG.md  Cargo.toml  README.md
hyperstack-idl/: CHANGELOG.md  Cargo.toml  README.md
hyperstack-idl/src/: discriminator.rs  error.rs  lib.rs  parse.rs  search.rs  snapshot.rs  types.rs
hyperstack-idl/src/analysis/: connect.rs  mod.rs  pda_graph.rs  relations.rs  type_graph.rs
hyperstack-idl/tests/: parse_fixtures.rs
hyperstack-idl/tests/fixtures/: ore.json
hyperstack-macros/: CHANGELOG.md  Cargo.toml  README.md  test_oneof
hyperstack-macros/src/: diagnostic.rs  event_type_helpers.rs  idl_codegen.rs  idl_parser_gen.rs  idl_vixen_gen.rs  lib.rs  proto_codegen.rs  utils.rs  views_macro.rs
hyperstack-macros/src/ast/: mod.rs  reader.rs  types.rs  versioned.rs  writer.rs
hyperstack-macros/src/codegen/: bytecode.rs  computed.rs  core.rs  field_accessors.rs  generate_all.rs  handlers.rs  mod.rs  multi_entity.rs  parsers.rs  resolvers.rs  sdk.rs  spec_fn.rs  vixen_runtime.rs  vm_handler.rs
hyperstack-macros/src/parse/: attributes.rs  conditions.rs  idl.rs  mod.rs  pda_validation.rs  proto.rs
hyperstack-macros/src/stream_spec/: ast_writer.rs  computed.rs  entity.rs  handlers.rs  idl_spec.rs  mod.rs  module.rs  proto_struct.rs  sections.rs
hyperstack-macros/src/validation/: idl_refs.rs  mod.rs
hyperstack-macros/tests/: key_resolution_dynamic.rs  phase0_dynamic.rs  phase1_runtime.rs  phase2_dynamic.rs  phase3_dynamic.rs  phase4_dynamic.rs  phase5_dynamic.rs  support.rs
hyperstack-macros/tests/ui/map_errors/: malformed_map_attribute.rs  malformed_map_attribute.stderr  nested_malformed_map_attribute.rs  nested_malformed_map_attribute.stderr
hyperstack-macros/tests/ui/pass/: empty_module.rs  missing_proto_file.rs  proto_flag.rs  proto_list.rs
hyperstack-macros/tests/ui/resolve_errors/: malformed_resolve_attribute.rs  malformed_resolve_attribute.stderr  malformed_url_template.rs  unknown_resolver.rs  unknown_resolver.stderr  unsupported_resolver_type.rs  unsupported_resolver_type.stderr
hyperstack-macros/tests/ui/validation_errors/: computed_cycle.rs  computed_cycle.stderr  invalid_idl_literal.rs  invalid_idl_literal.stderr  invalid_proto_literal.rs  invalid_proto_literal.stderr  invalid_skip_decoders_assignment.rs  invalid_skip_decoders_assignment.stderr  missing_proto_file.stderr  missing_proto_value.rs  missing_proto_value.stderr  (+4 more)
hyperstack/src/: lib.rs
interpreter/: CHANGELOG.md  Cargo.toml  README.md  build.rs
interpreter/proto/: settlement.proto
interpreter/src/: ast.rs  canonical_log.rs  compiler.rs  event_type_helpers.rs  lib.rs  metrics_context.rs  proto_router.rs  resolvers.rs  runtime_resolvers.rs  rust.rs  scheduler.rs  slot_hash_cache.rs  spec_trait.rs  typescript.rs  versioned.rs  vm.rs  vm_metrics.rs
python/arete-sdk/: .gitignore  README.md  pyproject.toml
python/arete-sdk/arete/: __init__.py  auth.py  client.py  errors.py  store.py  types.py  websocket.py
python/arete-sdk/examples/: basic_usage.py  custom_parser.py
python/hyperstack-sdk/: README.md  pyproject.toml
python/hyperstack-sdk/examples/: basic_usage.py  custom_parser.py  pumpfun.py
python/hyperstack-sdk/hyperstack/: __init__.py  auth.py  client.py  connection.py  errors.py  store.py  types.py  views.py  websocket.py
rust/arete-auth/: CHANGELOG.md  Cargo.toml  README.md
rust/arete-auth-server/: Cargo.toml
rust/arete-auth-server/src/: config.rs  error.rs  handlers.rs  keys.rs  main.rs  middleware.rs  models.rs  rate_limiter.rs  server.rs
rust/arete-auth/src/: audit.rs  claims.rs  error.rs  lib.rs  metrics.rs  multi_key.rs  revocation.rs  token.rs
rust/arete-mcp/: Cargo.toml  README.md
rust/arete-mcp/src/: connections.rs  credentials.rs  filter.rs  main.rs  subscriptions.rs
rust/hyperstack-mcp/: Cargo.toml  README.md
rust/hyperstack-mcp/src/: connections.rs  credentials.rs  main.rs  subscriptions.rs
rust/hyperstack-sdk/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
rust/hyperstack-sdk/src/: auth.rs  client.rs  config.rs  connection.rs  entity.rs  error.rs  frame.rs  lib.rs  mutation.rs  prelude.rs  serde_utils.rs  state.rs  store.rs  stream.rs  subscription.rs  view.rs
rust/hyperstack-sdk/tests/: auth_lifecycle.rs
rust/hyperstack-server/: CHANGELOG.md  Cargo.toml  README.md
rust/hyperstack-server/examples/: basic.rs
rust/hyperstack-server/src/: bus.rs  cache.rs  compression.rs  config.rs  health.rs  lib.rs  materialized_view.rs  metrics.rs  mutation_batch.rs  projector.rs  runtime.rs  sorted_cache.rs  telemetry.rs
stacks/ore/: Cargo.toml  arete.toml  hyperstack.toml
stacks/ore/.hyperstack/: OreRound.ast.json  OreStream.stack.json
stacks/ore/idl/: entropy.json  ore.json
stacks/ore/src/: lib.rs  stack.rs
stacks/pumpfun/: Cargo.toml  hyperstack.toml
stacks/pumpfun/.hyperstack/: PumpfunStream.stack.json  PumpfunToken.ast.json
stacks/pumpfun/src/: lib.rs  spec.rs  stack.rs
stacks/sdk/rust/: CHANGELOG.md  Cargo.toml  README.md
(+429 files in other folders)
