[workspace]
resolver = "2"
members = [
    "hyperstack",
    "interpreter",
    "hyperstack-macros",
    "hyperstack-idl",
    "cli",
    "rust/hyperstack-server",
    "rust/hyperstack-sdk",
    "rust/hyperstack-auth",
    "rust/hyperstack-auth-server",
    "stacks/sdk/rust",
]
exclude = [
    "stacks/pumpfun",
    "stacks/ore",
    "examples/rust-client",
    "examples/ore-server",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/HyperTekOrg/hyperstack.git"
authors = ["Hypertek"]

[workspace.dependencies]
# Yellowstone Vixen ecosystem
yellowstone-vixen = "0.6.0-alpha.0"
yellowstone-vixen-core = "0.6.0-alpha.0"
yellowstone-vixen-proto = "0.6.0-alpha.0"
yellowstone-vixen-yellowstone-grpc-source = "0.6.0-alpha.0"
# Yellowstone gRPC client (for standalone slot subscriptions)
yellowstone-grpc-client = "9.1.0"
yellowstone-grpc-proto = "9.1.0"
