[package]
name = "arete-idl"
version = "0.0.1"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "IDL parsing and type system for Arete"
readme = "README.md"
documentation = "https://docs.rs/arete-idl"
keywords = ["arete", "idl", "types", "parsing"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11"
tracing = "0.1"
