[package]
name = "hyperstack-cli"
version = "0.3.5"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "CLI tool for generating TypeScript SDKs from HyperStack stream specifications"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-cli"
keywords = ["hyperstack", "cli", "codegen", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hs"
path = "src/main.rs"

[features]
default = []
# Enable local development mode (uses http://localhost:3000 instead of production API)
local = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
indicatif = "0.17"
console = "0.15"
hyperstack-interpreter = { version = "0.3.5", path = "../interpreter" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5.0"
rpassword = "7.3"
dialoguer = "0.11"
flate2 = "1.0"
tar = "0.4"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"

