[package]
name = "hyperstack-cli"
version = "0.6.0"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "CLI tool for generating TypeScript SDKs from HyperStack stream specifications"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-cli"
keywords = ["hyperstack", "cli", "codegen", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hs"
path = "src/main.rs"

[features]
default = []
# Enable local development mode (uses http://localhost:3000 instead of production API)
local = []
# Enable interactive TUI for `hs stream --tui`
tui = ["ratatui", "crossterm"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
indicatif = "0.17"
console = "0.15"
hyperstack-interpreter = { version = "0.6.0", path = "../interpreter" }
hyperstack-idl = { path = "../hyperstack-idl", version = "0.1.6" }
hyperstack-sdk = { path = "../rust/hyperstack-sdk", version = "0.6.0" }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs = "5.0"
rpassword = "7.3"
dialoguer = "0.11"
flate2 = "1.0"
tar = "0.4"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

