[package]
name = "a4-cli"
version = "0.0.1"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "CLI tool for generating TypeScript SDKs from Arete stream specifications"
readme = "README.md"
documentation = "https://docs.rs/a4-cli"
keywords = ["arete", "cli", "codegen", "typescript", "a4"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "a4"
path = "src/main.rs"

[features]
default = []
# Enable local development mode (uses http://localhost:3000 instead of production API)
local = []
# Enable interactive TUI for `a4 stream --tui`
tui = ["ratatui", "crossterm"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
indicatif = "0.17"
console = "0.15"
arete-interpreter = { version = "0.0.1", path = "../interpreter" }
arete-idl = { path = "../arete-idl", version = "0.0.1" }
arete-sdk = { path = "../rust/arete-sdk", version = "0.0.1" }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs = "5.0"
rpassword = "7.3"
dialoguer = "0.11"
flate2 = "1.0"
tar = "0.4"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
futures-util = { version = "0.3", features = ["sink"] }
# Use OS trust store (e.g. Windows) so WSS handshakes match browsers / native TLS clients.
# webpki-roots alone can fail against some production TLS chains.
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
url = "2"
