[package]
name = "hyperstack-idl"
version = "0.1.0"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "IDL parsing and type system for HyperStack"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-idl"
keywords = ["hyperstack", "idl", "types", "parsing"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strsim = "0.11"
