[package]
name = "hyperstack-macros"
version = "0.3.4"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "Proc-macros for defining HyperStack streams"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-macros"
keywords = ["hyperstack", "streaming", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
