[package]
name = "hyperstack"
version = "0.1.2"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "Real-time streaming data pipelines for Solana - transform on-chain events into typed state projections"
keywords = ["hyperstack", "solana", "streaming", "blockchain", "realtime"]
categories = ["web-programming", "development-tools"]
documentation = "https://docs.rs/hyperstack"
readme = "README.md"

[dependencies]
# Core interpreter - AST transformation runtime and VM
hyperstack-interpreter = { version = "0.1.2", path = "../interpreter", optional = true }

# Macros - proc-macros for defining streams
hyperstack-macros = { version = "0.1.2", path = "../hyperstack-macros", optional = true }

# Server - WebSocket server and projection handlers
hyperstack-server = { version = "0.1.2", path = "../rust/hyperstack-server", optional = true }

# SDK - Rust client for connecting to HyperStack servers
hyperstack-sdk = { version = "0.1.0", path = "../rust/hyperstack-sdk", optional = true }

[features]
default = ["interpreter", "macros", "server"]
full = ["interpreter", "macros", "server", "sdk"]
interpreter = ["dep:hyperstack-interpreter"]
macros = ["dep:hyperstack-macros"]
server = ["dep:hyperstack-server"]
sdk = ["dep:hyperstack-sdk"]
