[package]
name = "hyperstack"
version = "0.4.3"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "Real-time streaming data pipelines for Solana - transform on-chain events into typed state projections"
keywords = ["hyperstack", "solana", "streaming", "blockchain", "realtime"]
categories = ["web-programming", "development-tools"]
documentation = "https://docs.rs/hyperstack"
readme = "README.md"

[dependencies]
# Core interpreter - AST transformation runtime and VM
hyperstack-interpreter = { version = "0.4.3", path = "../interpreter", optional = true }

# Macros - proc-macros for defining streams
hyperstack-macros = { version = "0.4.3", path = "../hyperstack-macros", optional = true }

# Server - WebSocket server and projection handlers
hyperstack-server = { version = "0.4.3", path = "../rust/hyperstack-server", optional = true }

# SDK - Rust client for connecting to HyperStack servers
hyperstack-sdk = { version = "0.4.3", path = "../rust/hyperstack-sdk", optional = true }

# Runtime dependencies for macro-generated code (re-exported via hyperstack::runtime)
tokio = { version = "1.0", features = ["full"], optional = true }
anyhow = { version = "1.0", optional = true }
dotenvy = { version = "0.15", optional = true }
smallvec = { version = "1.15", optional = true }
bs58 = { version = "0.5", optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }
yellowstone-vixen = { workspace = true, optional = true }
yellowstone-vixen-core = { workspace = true, optional = true }
yellowstone-vixen-yellowstone-grpc-source = { workspace = true, optional = true }

[features]
default = ["interpreter", "macros", "server"]
full = ["interpreter", "macros", "server", "sdk"]
interpreter = ["dep:hyperstack-interpreter"]
macros = ["dep:hyperstack-macros", "runtime"]
server = ["dep:hyperstack-server"]
sdk = ["dep:hyperstack-sdk"]
runtime = [
    "dep:tokio",
    "dep:anyhow",
    "dep:dotenvy",
    "dep:smallvec",
    "dep:bs58",
    "dep:tracing",
    "dep:serde",
    "dep:serde_json",
    "dep:bytemuck",
    "dep:yellowstone-vixen",
    "dep:yellowstone-vixen-core",
    "dep:yellowstone-vixen-yellowstone-grpc-source",
]
