[package]
name = "arete-interpreter"
version = "0.0.1"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "AST transformation runtime and VM for Arete streaming pipelines"
readme = "README.md"
documentation = "https://docs.rs/arete-interpreter"
keywords = ["arete", "streaming", "interpreter", "vm"]
categories = ["development-tools"]

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-pubkey = "2.3"
prost-reflect = "0.16.2"
hex = "0.4"
bs58 = "0.5"
lru = "0.12"
sha2 = "0.10"
sha3 = "0.10"
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
once_cell = "1.20"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
arete-macros = { version = "0.0.1", path = "../arete-macros" }
arete-idl = { path = "../arete-idl", version = "0.0.1" }

# OpenTelemetry for distributed tracing and metrics (optional, behind 'otel' feature)
opentelemetry = { version = "0.22", features = ["otel_unstable"], optional = true }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics"], optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }

[features]
default = []
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]
