[package]
name = "ore-rust-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
arete-sdk = { path = "../../rust/arete-sdk", version = "0.0.1" }
arete-stacks = { path = "../../stacks/sdk/rust", version = "0.0.1", features = ["ore"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
