[package]
name = "ore-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "ore-server"
path = "src/main.rs"

[workspace]
resolver = "2"

[dependencies]
ore-stack = { path = "../../stacks/ore" }
arete-server = { path = "../../rust/arete-server", version = "0.0.1" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# TLS crypto provider for rustls (required by yellowstone-vixen/tonic)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
