[package]
name = "pumpfun-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "pumpfun-server"
path = "src/main.rs"

[dependencies]
pumpfun-stack = { path = "../../stacks/pumpfun" }
hyperstack-server = { path = "../../rust/hyperstack-server" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# TLS crypto provider for rustls (required by yellowstone-vixen/tonic)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
