[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arete-sdk"
version = "0.0.1"
description = "Python SDK for Arete"
requires-python = ">=3.9"
authors = [
    { name = "Arete Team" }
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://arete.run"
Repository = "https://github.com/AreteA4/arete"
Documentation = "https://docs.arete.run"
Issues = "https://github.com/AreteA4/arete/issues"

[tool.setuptools.packages.find]
include = ["arete*"]
