[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperstack-sdk"
version = "0.1.0"
description = "Python SDK for HyperStack"
requires-python = ">=3.9"
authors = [
    { name = "hyperstack" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/HyperTekOrg/hyperstack"
Repository = "https://github.com/HyperTekOrg/hyperstack"
Documentation = "https://github.com/HyperTekOrg/hyperstack#readme"
Issues = "https://github.com/HyperTekOrg/hyperstack/issues"

[tool.setuptools.packages.find]
include = ["hyperstack*"]
