[package]
name = "arete-auth"
version = "0.0.1"
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
description = "Authentication and authorization utilities for Arete"
readme = "README.md"
documentation = "https://docs.rs/arete-auth"
keywords = ["arete", "auth", "jwt", "websocket"]
categories = ["authentication", "web-programming"]

[dependencies]
# JWT handling
jsonwebtoken = "9.0"

# Ed25519 signing
ed25519-dalek = { version = "2.0", features = ["serde", "pkcs8"] }
rand = "0.8"

# HTTP client for JWKS
reqwest = { version = "0.12", features = ["json"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["jwks"]
jwks = ["reqwest"]
