[package]
name = "hyperstack-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server wrapping HyperStack streams for AI agent integration"

[[bin]]
name = "hs-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
