[package]
name = "hyperstack-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) server wrapping HyperStack streams for AI agent integration"
readme = "README.md"

[[bin]]
name = "hs-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dashmap = "6"
dirs = "5"
hyperstack-sdk = { path = "../hyperstack-sdk" }
regex = "1.10"
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
