[package]
name = "hyperstack-sdk"
version = "0.1.2"
edition.workspace = true
license = "MIT"
repository.workspace = true
authors.workspace = true
description = "Rust SDK client for connecting to HyperStack streaming servers"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-sdk"
keywords = ["hyperstack", "streaming", "sdk", "client"]
categories = ["api-bindings"]

[[example]]
name = "flip"
path = "examples/flip/flip_demo.rs"

[[example]]
name = "pump_new"
path = "examples/pump/new_launches.rs"

[[example]]
name = "pump_trades"
path = "examples/pump/token_trades.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
tracing = "0.1"
