[package]
name = "hyperstack-sdk"
version = "0.6.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
authors.workspace = true
description = "Rust SDK client for connecting to HyperStack streaming servers"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-sdk"
keywords = ["hyperstack", "streaming", "sdk", "client", "websocket"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["rustls"]
rustls = ["tokio-tungstenite/rustls-tls-webpki-roots"]
native-tls = ["tokio-tungstenite/native-tls"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
flate2 = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
pin-project-lite = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
axum = "0.7"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
