[package]
name = "ore-stack"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hyperstack = { path = "../../hyperstack", features = ["full"] }

# Required for user struct definitions and IDL-generated types
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
solana-pubkey = { version = "2.2", features = ["serde", "borsh"] }
