[package]
name = "hyperstack-stacks"
version = "0.3.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
authors.workspace = true
description = "Protocol stacks for Hyperstack - ready-to-use Solana data streams"
readme = "README.md"
documentation = "https://docs.rs/hyperstack-stacks"
keywords = ["hyperstack", "solana", "blockchain", "streaming"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["pumpfun"]
pumpfun = []
full = ["pumpfun"]

[dependencies]
hyperstack-sdk = { version = "0.3.0", path = "../../../rust/hyperstack-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
